# optimization-course

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  config.mk
example/: main.py  problems.py  solve.py
notebooks/: Makefile  how_to_define_an_NLP.ipynb  how_to_query_an_NLP.ipynb  opt-1.ipynb  sparseJacobians.ipynb
tutorials/: Makefile  how_to_query_an_NLP.ipynb  opt-1.ipynb  opt-2.ipynb
tutorials/.ipynb_checkpoints/: opt-1-checkpoint.ipynb
